<resources>
    <string name="app_name">OpenMarket</string>
    <string name="welcome_to_open_market">Welcome to OpenMarket</string>
    <string name="sign_in_to_continue">Sign in to continue</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="login">Sign In</string>
    <string name="continue_with_google">Login with Google</string>
    <string name="continue_with_facebook">Login with facebook</string>
    <string name="no_account_yet">Don’t have an account?</string>
    <string name="sign_up">Register</string>
    <string name="let_get_started">Let’s Get Started</string>
    <string name="create_a_new_account">Create a new account</string>
    <string name="full_name">Full Name</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="register">Sign Up</string>
    <string name="have_an_account">Have an account</string>
    <string name="payment">Payment</string>
    <string name="address">Address</string>
    <string name="order">Order</string>
    <string name="profile">Profile</string>
    <string name="account">Account</string>
    <string name="user_name">User Name</string>
    <string name="gender">Gender</string>
    <string name="birthday">Birthday</string>
    <string name="male">Male</string>
    <string name="date">12-12-2000</string>
    <string name="email">Email</string>
    <string name="sample_email">openmarket@gmail.com</string>
    <string name="phone_number">Phone Number</string>
    <string name="sample_number">0700000000</string>
    <string name="change_password">Change Password</string>
    <string name="sample_password">0000000000</string>
</resources>